tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/bool/almost-true-with-extra.stderr
TOML parse error at line 1, column 5
  |
1 | a = truthy
  |     ^
invalid string
expected `"`, `'`
